update validation for creating and updating loan
